[gd_scene load_steps=4 format=3 uid="uid://cqfjojykywphk"]

[ext_resource type="Script" path="res://enemy_gun.gd" id="1_k2q7b"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://sprites/pistol/pistol.png" id="2_iveuc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_da826"]
radius = 500.064

[node name="enemy_gun" type="Area2D"]
script = ExtResource("1_k2q7b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_da826")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="Marker2D"]
position = Vector2(79, -38)
texture = ExtResource("2_iveuc")

[node name="ShootingPoint" type="Marker2D" parent="Marker2D/Pistol"]
unique_name_in_owner = true
position = Vector2(27, -11)

[node name="can_shoot" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="can_shoot" to="." method="_on_can_shoot_timeout"]
